--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:600,700"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="responsive.css" />
-    <title>Kalkulator Berbasis WEB</title>
+    <title>Project Kalkulator</title>
   </head>
 
   <body>
+    <!-- Code layar full -->
     <div id="container">
+      <!-- Code bagian kalkulatornya -->
       <div id="calculator">
+        <!-- Code bagian layar tampilan kalkulator -->
         <div id="result">
           <div class="main">
             <h4>Calculator</h4>
@@ -27,7 +29,7 @@
             <p id="output-values"></p>
           </div>
         </div>
-        <!-- Code Angka dan Operator -->
+        <!-- Code Tombol Angka dan Operator -->
         <div id="keyboard">
           <button class="operator" id="clear">C</button>
           <button class="operator" id="backspace">CE</button>
